# Vehicle-Insurance-Fraud-Detection-End2End

./: .dockerignore  Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.inference.txt  requirements.txt  streamlit_app.py
api/: app.py
notebooks/: EDA.ipynb  xgboost_full_pipeline.pkl
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: __init__.py  config.py  features.py  predict.py  risk.py  train.py
