[project]
name = "vehicle-insurance-fraud-detection-end2end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "llvmlite>=0.42",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numba>=0.59",
    "numpy>=1.26,<2.4",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51,<0.52",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]
